ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apps
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: devops.konprime.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-web
                port:
                  name: web
